# blueism_configurator

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/icons/: app-icon.icns
languages/: en_us.json  zh_cn.json
src/: app.rs  hid.rs  main.rs
src/application/: app.rs  data.rs  mod.rs  preferences.rs  runtime.rs
src/hid_backend/: config_channel.rs  device_discovery.rs  device_information.rs  firmware_dfu.rs  firmware_package.rs  firmware_repository.rs  mod.rs
src/ui/: font.rs  i18n.rs  mod.rs  text.rs  theme.rs  widgets.rs
