[package]
name = "blueism-configurator"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "=0.33.3"
egui = "=0.33.3"
egui_extras = "=0.33.3"
chrono = "0.4"
crc32fast = "1"
hidapi = "2"
rfd = "=0.14.1"
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
url = "=2.5.4"
zip = "2"
